--- a/package.json
+++ b/package.json
@@ -1,121 +1,109 @@
 {
-	"name": "homechow",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev -p 3003",
-		"build": "next build",
-		"start": "next start -p 3003",
-		"lint": "next lint",
-		"lint:fix": "eslint . --ext ts --ext tsx --ext js --fix",
-		"prettier:fix": "prettier --write \"**/*.{ts,tsx,js,jsx}\"",
-		"prettier:check": "prettier --check \"**/*.{ts,tsx,js,jsx}\"",
-		"coverage": "yarn test --coverage --watchAll --collectCoverageFrom=\"src/**/*.{ts,tsx,js,jsx}\"",
-		"prepare": "husky install",
-		"cypress:open": "cypress open",
-		"cypress:run": "cypress run --config video=false",
-		"cypress:ci": "start-server-and-test 'yarn dev' 3003 'yarn cypress:run'",
-		"cypress:comp": "cypress run --config video=false --component",
-		"storybook": "start-storybook -p 6006",
-		"build-storybook": "build-storybook"
-	},
-	"dependencies": {
-		"@cypress/webpack-dev-server": "^3.3.1",
-		"@next/font": "13.1.6",
-		"@react-google-maps/api": "^2.12.2",
-		"@storybook/addon-docs": "^6.5.16",
-		"@tailwindcss/forms": "^0.5.3",
-		"@tailwindcss/typography": "^0.5.9",
-		"@types/js-cookie": "^3.0.3",
-		"@types/node": "18.11.18",
-		"@types/react": "18.0.27",
-		"@types/react-datepicker": "^4.8.0",
-		"@types/react-dom": "18.0.10",
-		"@types/react-payment-inputs": "^1.1.0",
-		"autoprefixer": "^10.4.13",
-		"chart.js": "^4.2.1",
-		"classnames": "^2.3.2",
-		"eslint": "8.33.0",
-		"eslint-config-next": "13.1.6",
-		"eslint-plugin-cypress": "^2.12.1",
-		"eslint-plugin-testing-library": "^5.10.0",
-		"html-webpack-plugin": "^5.5.0",
-		"i18next": "^22.4.10",
-		"js-cookie": "^3.0.1",
-		"next": "13.1.6",
-		"next-i18next": "^13.1.5",
-		"postcss": "^8.4.21",
-		"postcss-import": "^15.1.0",
-		"postcss-loader": "^7.1.0",
-		"react": "^18.2.0",
-		"react-datepicker": "^4.8.0",
-		"react-dom": "18.2.0",
-		"react-hook-form": "6.0.0-rc.5",
-		"react-i18next": "^12.2.0",
-		"react-icons": "^4.7.1",
-		"react-number-format": "^4.9.3",
-		"react-payment-inputs": "^1.1.9",
-		"react-query": "^3.39.3",
-		"react-router-dom": "^6.9.0",
-		"react-tooltip": "^4.2.21",
-		"sharp": "^0.31.3",
-		"start-server-and-test": "^1.15.3",
-		"storybook": "^6.5.16",
-		"storybook-addon-next": "^1.7.3",
-		"swr": "^2.0.3",
-		"tailwindcss": "^3.2.4",
-		"typescript": "4.9.4",
-		"webpack": "5"
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged"
-		}
-	},
-	"lint-staged": {
-		"src/**/*.{ts,tsx,js,jsx}": [
-			"yarn prettier:fix",
-			"yarn lint",
-			"git add ."
-		]
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"devDependencies": {
-		"@babel/core": "^7.20.12",
-		"@cypress/react": "^7.0.2",
-		"@storybook/addon-actions": "^6.5.16",
-		"@storybook/addon-controls": "^6.5.16",
-		"@storybook/addon-docs": "^6.5.16",
-		"@storybook/addon-essentials": "^6.5.16",
-		"@storybook/addon-interactions": "^6.5.16",
-		"@storybook/addon-postcss": "^2.0.0",
-		"@storybook/builder-webpack5": "^6.5.16",
-		"@storybook/manager-webpack5": "^6.5.16",
-		"@storybook/react": "^6.5.16",
-		"@storybook/testing-library": "^0.0.13",
-		"@typescript-eslint/eslint-plugin": "^5.50.0",
-		"@typescript-eslint/parser": "^5.50.0",
-		"cypress": "^12.8.1",
-		"eslint-config-airbnb": "^19.0.4",
-		"eslint-config-prettier": "^8.6.0",
-		"eslint-plugin-import": "^2.27.5",
-		"eslint-plugin-jsx-a11y": "^6.7.1",
-		"eslint-plugin-prettier": "^4.2.1",
-		"eslint-plugin-react": "^7.32.2",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-storybook": "^0.6.11",
-		"husky": "^8.0.3",
-		"msw": "^1.1.0",
-		"prettier": "^2.8.3",
-		"storybook-addon-next": "^1.7.3",
-		"webpack-cli": "^5.0.1"
-	},
-	"msw": {
-		"workerDirectory": "public"
-	}
+  "name": "homechow",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev -p 3003",
+    "build": "next build",
+    "start": "next start -p 3003",
+    "lint": "next lint",
+    "lint:fix": "eslint . --ext ts --ext tsx --ext js --fix",
+    "prettier:fix": "prettier --write \"**/*.{ts,tsx,js,jsx}\"",
+    "prettier:check": "prettier --check \"**/*.{ts,tsx,js,jsx}\"",
+    "coverage": "yarn test --coverage --watchAll --collectCoverageFrom=\"src/**/*.{ts,tsx,js,jsx}\"",
+    "prepare": "husky install",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "cypress:ci": "start-server-and-test 'yarn dev' 3003 'yarn cypress:run'",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
+  },
+  "dependencies": {
+    "@next/font": "13.1.6",
+    "@react-google-maps/api": "^2.12.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/js-cookie": "^3.0.3",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.27",
+    "@types/react-datepicker": "^4.8.0",
+    "@types/react-dom": "18.0.10",
+    "@types/react-payment-inputs": "^1.1.0",
+    "@types/react-table": "^7.7.14",
+    "autoprefixer": "^10.4.13",
+    "classnames": "^2.3.2",
+    "eslint": "8.33.0",
+    "eslint-config-next": "13.1.6",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-testing-library": "^5.10.0",
+    "i18next": "^22.4.10",
+    "js-cookie": "^3.0.1",
+    "next": "13.1.6",
+    "next-i18next": "^13.1.5",
+    "postcss": "latest",
+    "postcss-import": "^15.1.0",
+    "postcss-loader": "^7.0.2",
+    "react": "18.2.0",
+    "react-datepicker": "^4.8.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "6.0.0-rc.5",
+    "react-i18next": "^12.2.0",
+    "react-icons": "^4.7.1",
+    "react-number-format": "^4.9.3",
+    "react-payment-inputs": "^1.1.9",
+    "react-query": "^3.39.3",
+    "react-table": "^7.8.0",
+    "react-tooltip": "^4.2.21",
+    "start-server-and-test": "^1.15.3",
+    "storybook": "^6.5.16",
+    "storybook-addon-next": "^1.7.3",
+    "swr": "^2.0.3",
+    "tailwindcss": "^3.2.4",
+    "typescript": "4.9.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx,js,jsx}": [
+      "yarn prettier:fix",
+      "yarn lint",
+      "git add ."
+    ]
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/builder-webpack5": "^6.5.16",
+    "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/react": "^6.5.16",
+    "@storybook/testing-library": "^0.0.13",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "babel-loader": "^8.3.0",
+    "cypress": "^12.5.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.11",
+    "husky": "^8.0.3",
+    "i": "^0.3.7",
+    "prettier": "^2.8.3"
+  }
 }
